# pico-hybrid-crypto

./: CMakeLists.txt  LICENSE  README.md  host.py  memmap_custom.ld  rsa_priv.pem  rsa_pub.pem
config/: user_settings.h  worked_settings.h
include/: rsa_priv.h
plot/: encDec.py  keyEst.py  keyGenComp.py  sig.py
src/: aes_benchmark.c  bench_main.c  blink.c  ecc.c  mldsa.c  mldsa_benchmark.c  mlkem.c  mlkem_benchmark.c  rsaKeydis_benchmark.c  rsaSign_benchmark.c  rsa_benchmark.c  rsa_priv.der  stackheap.c
